1
\n - for new line
, - saparate text











print(new_greeting)
new_greeting = 'Cheers'

---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
Cell In [7], line 1
----> 1 print(new_greeting)
      2 new_greeting = 'Cheers'

NameError: name 'new_greeting' is not defined


_correctName
coorectName
correctName89
89incorrect
_correctName
coorectName
correctName89
89incorrect
  Cell In [8], line 4
    89incorrect
      ^
SyntaxError: invalid syntax



greeting
Greeting



from = 'aa'


Cell In [9], line 1
    from = 'aa'
         ^
SyntaxError: invalid syntax
